chore: use production certificate

--- a/deploy/dashboard.yaml
+++ b/deploy/dashboard.yaml
@@ -12,5 +12,5 @@ spec:
         - name: deutsch
           port: 80
   tls:
-    # secretName: deutsch-live
-    secretName: deutsch
+    secretName: deutsch-live
+    # secretName: deutsch
