--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "xstart": "parcel --dist-dir=docs --no-source-maps",
     "start": "parcel --no-cache --dist-dir=docs",
     "watch": "parcel watch",
-    "clean": "rm docs/*",
+    "clean": "rm docs/* && rm .parcel-cache/*",
     "build": "parcel build --dist-dir=docs --no-source-maps"
   },
   "devDependencies": {
